--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 	#meerkat-wrap,#sitemix_pr_footer_js{
 display:none!important;}
 </style>	
+  <style>
+   body {
+    background: url(https://source.unsplash.com/1600x900/?sea,animal,city,girl,starry) no-repeat center center fixed;
+    /*兼容浏览器版本*/
+                -webkit-background-size: cover;
+    -o-background-size: cover;               
+    background-size: cover;
+   }
+   
+  </style>
 </head>
 <body>
 	<div class="list"><a href="#"><img width="300" src="logo.png" alt=""></a>
