--- a/index.html
+++ b/index.html
@@ -819,6 +819,13 @@ display:none!important;}
               <h2>CPB-Base</h2>
               <h3>Q5</h3>
           </a>
+		  <li>
+          <span class="icon"></span>
+          <a href="https://wwr.lanzouw.com/i82hK2lkn86b
+" target="_blank" class="text">
+              <h2>QKTokenServer</h2>
+              <h3></h3>
+          </a>
       </li>
     
       <li>
@@ -827,6 +834,14 @@ display:none!important;}
 " target="_blank" class="text">
               <h2>CPB-Base</h2>
               <h3>Q5Plus</h3>
+          </a>
+      </li> 
+	  <li>
+          <span class="icon"></span>
+          <a href="https://wwr.lanzouw.com/iT24g2lkn8je
+" target="_blank" class="text">
+              <h2>QKTokenServer</h2>
+              <h3></h3>
           </a>
       </li>
    
