--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="shortcut icon" href="favicon.ico">
-<meta name="description" content="远程协助首页"/>
+<meta name="description" content=""/>
 <meta name="robots" content="nofollow">
 <meta name="viewport" content="width=device-width">
 <meta http-equiv="Cache-Control" content="no-transform" /> 
