--- a/index.html
+++ b/index.html
@@ -1014,8 +1014,12 @@ display:none!important;}
 									<p>
 										adb reboot bootloader | *20121220# | adb devices | CwtBVxUgHGNsbX6g
 									</p>
-									<div class="footer">
-										工微：Wander-WeChat
-									</div>
+									<p align="center">
+<p>
+	<img src="src/ipv6.svg" alt="" style="max-width: 100%; height: 24px;">
+	</a>
+	<img src="src/wx.svg" alt="" style="max-width: 100%; height: 24px;">
+	</a>
+</p>
 </body>
 </html>
