--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ display:none!important;}
 			<li>
 				<span class="icon">
 				</span>
-				<a href="https://wwr.lanzouw.com/iOIFf2kvksda
+				<a href="https://wwr.lanzouw.com/ihkEc2l0regb
 				" target="_blank" class="text">
 					<h2>
 						QPST
@@ -1007,6 +1007,45 @@ display:none!important;}
 												</h2>
 												<h3>
 												others
+												</h3>
+											</a>
+										</li>
+										<li>
+											<span class="icon">
+											</span>
+											<a href="
+											" target="_blank" class="text">
+												<h2>
+												ROOT教程
+												</h2>
+												<h3>
+												ROOT/TWRP
+												</h3>
+											</a>
+										</li>
+										<li>
+											<span class="icon">
+											</span>
+											<a href="
+											" target="_blank" class="text">
+												<h2>
+												超星网盘
+												</h2>
+												<h3>
+												
+												</h3>
+											</a>
+										</li>
+										<li>
+											<span class="icon">
+											</span>
+											<a href="
+											" target="_blank" class="text">
+												<h2>
+												授权码
+												</h2>
+												<h3>
+												
 												</h3>
 											</a>
 										</li>
