--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ display:none!important;}
 			<li>
 				<span class="icon">
 				</span>
-				<a href="https://wwr.lanzouw.com/ij5Pf2l0qvxe
+				<a href="https://wwr.lanzouw.com/iGDhk2t25gbg
 				" target="_blank" class="text">
 					<h2>
 						UsbPort
@@ -1026,13 +1026,26 @@ display:none!important;}
 										<li>
 											<span class="icon">
 											</span>
-											<a href="
+											<a href="https://passport2.chaoxing.com
 											" target="_blank" class="text">
 												<h2>
 												超星网盘
 												</h2>
 												<h3>
 												
+												</h3>
+											</a>
+										</li>
+										<li>
+											<span class="icon">
+											</span>
+											<a href="https://passport2.chaoxing.com
+											" target="_blank" class="text">
+												<h2>
+												网盘
+												</h2>
+												<h3>
+												天翼/联通/移动/阿里/
 												</h3>
 											</a>
 										</li>
