--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <li class="list-item">
                         <a href="javascript:void(0);" class="item-link" style="color:inherit;">
                             <h3 class="item-title">
-                                <i class="fa fa-file-zip-o"></i> TWRPXIAN
+                                <i class="fa fa-file-zip-o"></i> TWRP
                             </h3>
                             <p class="item-desc">
                                 <i class="fa fa-tags"></i> TWRP线刷
@@ -1033,7 +1033,7 @@
                         </a>
                     </li>
                     <li class="list-item">
-                        <a href="https://www.firefox.com.cn/" target="_blank" class="item-link" style="color:inherit;">
+                        <a href="https://www.firefox.com/" target="_blank" class="item-link" style="color:inherit;">
                             <h3 class="item-title"><i class="fa fa-wrench "></i> Firefox</h3>
                             <p class="item-desc"> <i class="fa fa-tags"></i> 火狐浏览器</p>
                         </a>
