--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,9 @@
 
     <!-- 右下角功能按钮 -->
     <aside class="fixed-actions">
+       <button class="action-btn key-btn" onclick="window.open('src/key/index.html', '_blank')" title="系统查询">
+    <i class="fa fa-superpowers"></i>
+</button>
         <button class="action-btn key-btn">
             <a href="javascript:void(0);" title="授权码" style="color:inherit;">
                 <i class="fa fa-unlock"></i></a>
